Latest episodes are showing in Home Layout

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="dev.kuronosu.deguvon.ui.home.HomeFragment"
+        android:name="dev.kuronosu.deguvon.view.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="dev.kuronosu.deguvon.ui.dashboard.DashboardFragment"
+        android:name="dev.kuronosu.deguvon.view.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" >
         <action
@@ -27,7 +27,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="dev.kuronosu.deguvon.ui.notifications.NotificationsFragment"
+        android:name="dev.kuronosu.deguvon.view.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
