--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="anime_cover_width">100dp</dimen>
+    <dimen name="anime_cover_height">142dp</dimen>
+    <dimen name="card_corner_radius">10dp</dimen>
+    <dimen name="category_text_corner_radius">20dp</dimen>
+    <dimen name="small_space_general">4dp</dimen>
+    <dimen name="home_rv_padding">10dp</dimen>
 </resources>
