--- a/app/src/main/res/layout/shimmer_item_card_placeholder.xml
+++ b/app/src/main/res/layout/shimmer_item_card_placeholder.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_anime_cover"
-    android:layout_margin="4dp">
+    android:layout_marginHorizontal="5dp"
+    android:background="@drawable/shape_anime_cover">
 
     <ImageView
         android:layout_width="@dimen/anime_cover_width"
