--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="category_text_corner_radius">20dp</dimen>
     <dimen name="small_space_general">4dp</dimen>
     <dimen name="home_rv_padding">10dp</dimen>
+    <dimen name="search_item_radius">20dp</dimen>
 </resources>
