--- a/app/src/main/res/drawable/ripple_anime_search_item.xml
+++ b/app/src/main/res/drawable/ripple_anime_search_item.xml
@@ -4,7 +4,9 @@
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="#000000" />
-            <corners android:radius="@dimen/search_item_radius" />
+            <corners
+                android:topLeftRadius="@dimen/search_item_radius"
+                android:topRightRadius="@dimen/search_item_radius" />
         </shape>
     </item>
 </ripple>
