--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -27,6 +27,21 @@
             app:layout_constraintCircleRadius="@dimen/anime_cover_height"
             tools:src="@drawable/ic_launcher_foreground" />
 
+        <TextView
+            android:id="@+id/search_anime_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="6dp"
+            android:layout_marginBottom="6dp"
+            android:background="@drawable/shape_search_anime_type"
+            android:lines="1"
+            android:paddingHorizontal="3dp"
+            android:textSize="13sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/search_anime_image_container"
+            tools:text="Anime type" />
+
     </androidx.cardview.widget.CardView>
 
     <TextView
