--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="small_space_general">4dp</dimen>
     <dimen name="home_rv_padding">10dp</dimen>
     <dimen name="search_item_radius">20dp</dimen>
+    <integer name="search_columns">3</integer>
 </resources>
