--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_search_24dp"
-        android:title="@string/title_search" />
+        android:title="@string/search_hint" />
 
     <item
         android:id="@+id/navigation_dashboard"
