Change latest episode card

--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,57 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/anime_cover_width"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/card_corner_radius"
-    android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
-    app:cardElevation="10dp"
-    android:focusable="true">
+    android:focusable="true"
+    android:foreground="@drawable/ripple_anime_search_item">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/search_anime_image_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/anime_cover_height"
+        app:cardCornerRadius="@dimen/search_item_radius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/latest_episode_image"
-            android:layout_width="@dimen/anime_cover_width"
-            android:layout_height="@dimen/anime_cover_height"
-            android:adjustViewBounds="true"
-            android:background="@drawable/shape_anime_cover"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/shape_anime_search_image"
             android:contentDescription="@string/anime_image"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintCircleRadius="@dimen/anime_cover_height"
             tools:src="@drawable/ic_launcher_foreground" />
-
-        <TextView
-            android:id="@+id/latest_episode_anime_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_home_item_main_text"
-            android:maxLines="1"
-            android:paddingHorizontal="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/latest_episode_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="Anime name" />
 
         <TextView
             android:id="@+id/latest_episode_capi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_home_item_capi"
-            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="6dp"
+            android:layout_marginBottom="6dp"
+            android:background="@drawable/shape_search_anime_type"
+            android:lines="1"
             android:maxWidth="42dp"
             android:minWidth="20dp"
-            android:paddingHorizontal="4dp"
+            android:paddingHorizontal="3dp"
+            android:textSize="13sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="000" />
+            app:layout_constraintTop_toTopOf="@id/search_anime_image_container"
+            android:gravity="center"
+            tools:text="000"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/latest_episode_anime_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:lines="1"
+        android:paddingTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_anime_image_container"
+        tools:text="Anime name" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
