--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".view.ui.home.HomeFragment">
+    tools:context=".ui.home.view.HomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
