--- a/app/src/main/res/layout/item_menu_bottom_sheet.xml
+++ b/app/src/main/res/layout/item_menu_bottom_sheet.xml
@@ -10,20 +10,23 @@
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:contentDescription="@string/icon_of_the_menu_item"
         android:padding="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_baseline_play_arrow_24" />
+        tools:src="@drawable/ic_baseline_play_arrow_24"
+        app:tint="@color/black"/>
 
     <TextView
         android:id="@+id/tv_menu_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
         android:padding="4dp"
-        android:textSize="@dimen/font_size_24"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+        android:textSize="@dimen/font_size_16"
         app:layout_constraintStart_toEndOf="@id/iv_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Menu item" />
