--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="card_cover_background">#C7C7C7</color>
     <color name="colorGrey">#dddddd</color>
     <color name="primaryBlue">#01bcf3</color>
+    <color name="colorPrimary">#253B47</color>
+    <color name="colorPrimaryDark">#1E303A</color>
 </resources>
