--- a/app/src/main/res/drawable/shape_search_anime_type.xml
+++ b/app/src/main/res/drawable/shape_search_anime_type.xml
@@ -4,5 +4,5 @@
         android:left="3dp"
         android:right="3dp" />
     <corners android:radius="15dp" />
-    <solid android:color="@color/primaryBlue" />
+    <solid android:color="@color/teal_200" />
 </shape>
