--- a/app/src/main/res/drawable/shape_shadow_gradient.xml
+++ b/app/src/main/res/drawable/shape_shadow_gradient.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
     <gradient
-        android:angle="-90"
-        android:endColor="#242632"
-        android:startColor="#3a3c4a" />
+        android:angle="270"
+        android:endColor="#00ffffff"
+        android:startColor="#B7FFFFFF"
+        android:type="linear" />
+
 </shape>
