--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="card_cover_background">#C7C7C7</color>
     <color name="colorGrey">#dddddd</color>
-    <color name="primaryBlue">#01bcf3</color>
-    <color name="colorPrimary">#253B47</color>
-    <color name="colorPrimaryDark">#1E303A</color>
+    <color name="_primaryBlue">#01bcf3</color>
+    <color name="_colorPrimary">#253B47</color>
+    <color name="_colorPrimaryDark">#1E303A</color>
+    <color name="score_color">#FBFB47</color>
+
+    <color name="teal_200">#80cbc4</color>
+    <color name="teal_500">#4f9a94</color>
+    <color name="lime_200">#e6ee9c</color>
+    <color name="lime_dark">#b3bc6d</color>
 </resources>
