--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="FullScreenDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+    <style name="FullScreenDialogStyle" parent="Theme.MaterialComponents.DayNight.Dialog">
 <!--        <item name="android:windowNoTitle">true</item>-->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowIsFloating">false</item>
-        <item name="android:windowBackground">@color/white</item>
-        <item name="android:windowEnterAnimation">@android:anim/slide_in_left</item>
-        <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
+        <item name="android:windowBackground">@android:color/background_dark</item>
     </style>
-    <style name="AnimeDetailsTextExpanded" parent="TextAppearance.AppCompat.Display1">
+    <style name="AnimeDetails.TextExpanded" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">27sp</item>
+    </style>
+    <style name="AnimeDetails.TextCollapsed" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="AppTheme.AppBarOverlay.Simple.NoBackground" parent="ThemeOverlay.MaterialComponents.Dark" />
+    <style name="AnimeDetails.Title" parent="@style/TextAppearance.MaterialComponents.Body1">
         <item name="android:textColor">@color/white</item>
     </style>
 </resources>
