--- a/app/src/main/res/layout/dialog_fragment_anime_details.xml
+++ b/app/src/main/res/layout/dialog_fragment_anime_details.xml
@@ -168,6 +168,8 @@
                 android:id="@+id/synopsis2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:visibility="invisible"
                 app:layout_constraintLeft_toLeftOf="@id/synopsis"
                 app:layout_constraintRight_toRightOf="@id/synopsis"
@@ -181,7 +183,6 @@
                 android:layout_marginBottom="5dp"
                 android:background="#C9C9C9"
                 app:layout_constraintTop_toBottomOf="@id/synopsis" />
-
 
 
             <!--<TextView
