--- a/app/src/main/res/layout/item_menu_bottom_sheet.xml
+++ b/app/src/main/res/layout/item_menu_bottom_sheet.xml
@@ -16,8 +16,8 @@
         android:padding="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_baseline_play_arrow_24"
-        app:tint="@color/black"/>
+        app:tint="@color/white"
+        tools:src="@drawable/ic_baseline_play_arrow_24" />
 
     <TextView
         android:id="@+id/tv_menu_text"
@@ -26,8 +26,10 @@
         android:gravity="center_vertical"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+        android:textColor="@color/white"
         android:textSize="@dimen/font_size_16"
+        app:layout_constraintBottom_toBottomOf="@id/iv_icon"
         app:layout_constraintStart_toEndOf="@id/iv_icon"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_icon"
         tools:text="Menu item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
