--- a/app/src/main/res/layout/dialog_fragment_anime_details.xml
+++ b/app/src/main/res/layout/dialog_fragment_anime_details.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:theme="@style/FullScreenDialogStyle"
     tools:context=".ui.animeDetails.AnimeDetailsDialogFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
@@ -18,11 +18,12 @@
             android:layout_height="250dp"
             android:fitsSystemWindows="true"
             app:collapsedTitleTextAppearance="@style/AnimeDetails.TextCollapsed"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/design_dark_default_color_background"
             app:expandedTitleMarginBottom="25dp"
             app:expandedTitleMarginStart="25dp"
             app:expandedTitleTextAppearance="@style/AnimeDetails.TextExpanded"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:statusBarScrim="@android:color/transparent"
             app:toolbarId="@+id/toolbar"
             tools:title="Test">
 
@@ -31,37 +32,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:background="@drawable/shape_anime_details_image_background"
+
                 android:fitsSystemWindows="true"
                 android:foreground="?selectableItemBackground"
                 android:scaleType="centerCrop"
                 android:transitionName="img"
                 app:layout_collapseMode="parallax" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:alpha="0.3"
-                android:background="@drawable/shape_anime_details_image_background"
-                android:fitsSystemWindows="true" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:layout_gravity="top"
-                android:fitsSystemWindows="true" />
-
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/detail_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:background="@android:color/transparent"
+                android:fitsSystemWindows="true"
+                app:contentInsetStartWithNavigation="0dp"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:navigationIcon="?attr/homeAsUpIndicator"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:title="@string/app_name" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
     </com.google.android.material.appbar.AppBarLayout>
-
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/anime_detail_container"
@@ -80,51 +72,59 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="@dimen/dimen_8"
+                android:layout_marginTop="@dimen/dimen_12"
                 android:layout_marginEnd="16dp"
-                android:paddingTop="5dp"
-                android:text="Especial"
                 android:textAppearance="@style/AnimeDetails.Title"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Especial" />
 
             <TextView
                 android:id="@+id/type_state_separator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:paddingHorizontal="2dp"
                 android:text="-"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                 app:layout_constraintBottom_toBottomOf="@id/type"
-                app:layout_constraintLeft_toRightOf="@id/type" />
+                app:layout_constraintLeft_toRightOf="@id/type"
+                app:layout_constraintTop_toTopOf="@id/type" />
 
             <TextView
                 android:id="@+id/state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:text="Proximamente"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
-                app:layout_constraintBottom_toBottomOf="@id/type"
-                app:layout_constraintLeft_toRightOf="@id/type_state_separator" />
+                app:layout_constraintBottom_toBottomOf="@id/type_state_separator"
+                app:layout_constraintLeft_toRightOf="@id/type_state_separator"
+                app:layout_constraintTop_toTopOf="@id/type_state_separator" />
 
             <TextView
                 android:id="@+id/video_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:text="####"
+                android:gravity="center_vertical"
+                android:paddingStart="10dp"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                 app:layout_constraintBottom_toBottomOf="@id/state"
-                app:layout_constraintLeft_toRightOf="@id/state" />
+                app:layout_constraintLeft_toRightOf="@id/state"
+                app:layout_constraintTop_toTopOf="@id/state"
+                tools:text="####" />
 
             <Button
                 android:id="@+id/play_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
                 android:paddingVertical="8dp"
                 android:text="@string/watch_now"
-                android:textSize="16dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
                 app:icon="@drawable/ic_baseline_play_arrow_24"
+                app:iconTint="@color/black"
                 app:layout_constraintLeft_toLeftOf="@id/type"
                 app:layout_constraintTop_toBottomOf="@id/type"
                 app:layout_constraintWidth_percent="0.5" />
@@ -133,7 +133,7 @@
                 android:id="@+id/score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dimen_8"
+                android:layout_marginStart="@dimen/dimen_8"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                 android:textSize="@dimen/font_size_24"
                 app:layout_constraintBottom_toBottomOf="@id/play_button"
@@ -183,105 +183,6 @@
                 android:layout_marginBottom="5dp"
                 android:background="#C9C9C9"
                 app:layout_constraintTop_toBottomOf="@id/synopsis" />
-
-
-            <!--<TextView
-                android:id="@+id/details_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:text="Detalles"
-                android:textAppearance="@style/AnimeDetails.Title"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/sep_1" />-->
-
-            <!--<TextView
-                android:id="@+id/anime_type_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Tipo:"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/details_label"
-                app:layout_constraintWidth_percent="0.2" />-->
-
-            <!--<TextView
-                android:id="@+id/type"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Especial"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
-                app:layout_constraintBottom_toBottomOf="@id/anime_type_label"
-                app:layout_constraintLeft_toRightOf="@id/anime_type_label"
-                app:layout_constraintTop_toTopOf="@id/anime_type_label"
-                app:layout_constraintWidth_percent="0.3" />-->
-
-            <!--<TextView
-                android:id="@+id/anime_state_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Estado:"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/anime_type_label"
-                app:layout_constraintWidth_percent="0.2" />-->
-
-            <!--<TextView
-                android:id="@+id/state"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Proximamente"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
-                app:layout_constraintBottom_toBottomOf="@id/anime_state_label"
-                app:layout_constraintLeft_toRightOf="@id/anime_state_label"
-                app:layout_constraintTop_toTopOf="@id/anime_state_label"
-                app:layout_constraintWidth_percent="0.30" />-->
-
-            <!-- <TextView
-                 android:id="@+id/anime_id_label"
-                 android:layout_width="0dp"
-                 android:layout_height="wrap_content"
-                 android:text="ID:"
-                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                 app:layout_constraintLeft_toRightOf="@id/type"
-                 app:layout_constraintTop_toBottomOf="@id/details_label"
-                 app:layout_constraintWidth_percent="0.3" />-->
-
-            <!--<TextView
-                android:id="@+id/aid"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="####"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
-                app:layout_constraintBottom_toBottomOf="@id/anime_id_label"
-                app:layout_constraintLeft_toRightOf="@id/anime_id_label"
-                app:layout_constraintTop_toTopOf="@id/anime_id_label"
-                app:layout_constraintWidth_percent="0.15" />-->
-
-            <!--<TextView
-                android:id="@+id/anime_score_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Puntuación:"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                app:layout_constraintLeft_toRightOf="@id/state"
-                app:layout_constraintTop_toBottomOf="@id/anime_id_label"
-                app:layout_constraintWidth_percent="0.3" />-->
-
-            <!-- TODO -->
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
-
-    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@+id/anime_detail_container"
-        app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/stat_notify_chat" />-->
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
