--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="FullScreenDialogStyle" parent="Theme.MaterialComponents.DayNight.Dialog">
-<!--        <item name="android:windowNoTitle">true</item>-->
+        <!--        <item name="android:windowNoTitle">true</item>-->
+        <item name="colorPrimary">@color/teal_500</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/lime_200</item>
+        <item name="colorAccent">@color/lime_200</item>
+        <item name="colorSecondaryVariant">@color/lime_dark</item>
+        <item name="colorOnSecondary">@color/black</item>
+
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowIsFloating">false</item>
-        <item name="android:windowBackground">@android:color/background_dark</item>
+        <item name="android:windowBackground">@color/design_dark_default_color_background</item>
     </style>
+
     <style name="AnimeDetails.TextExpanded" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">27sp</item>
     </style>
+
     <style name="AnimeDetails.TextCollapsed" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/white</item>
+        <item name="android:titleMarginStart">0dp</item>
+        <item name="paddingStart">0dp</item>
     </style>
+
     <style name="AppTheme.AppBarOverlay.Simple.NoBackground" parent="ThemeOverlay.MaterialComponents.Dark" />
+
     <style name="AnimeDetails.Title" parent="@style/TextAppearance.MaterialComponents.Body1">
         <item name="android:textColor">@color/white</item>
     </style>
